[tool.poetry]
name = "ncompare"
version = "1.14.0a26"
description = "Compare the structure of two NetCDF files at the command line"
authors = ["Daniel Kaufman <daniel.kaufman@nasa.gov>"]
readme = "README.md"
repository = "https://github.com/nasa/ncompare"
license = "Apache-2.0"
classifiers = [
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[tool.poetry.scripts]
ncompare = "ncompare.console:main"

[tool.poetry.dependencies]
python = "^3.11"
numpy = ">=1.26.0"
netCDF4 = ">=1.6.4"
xarray = ">=2023.9"
colorama = ">=0.4.6"
openpyxl = ">=3.1.2"
h5py = ">=3.12.1"
h5netcdf = ">=1.4.1"
earthaccess = ">=0.15.1"

[tool.poetry.group.dev.dependencies]
pytest = ">=7.4.2,<10.0.0"
ruff = ">=0.5.1,<0.14.11"
mypy = ">=1.5.1"
pytest-cov = ">=4.1,<8.0"
mkdocs = ">=1.5.3"
markdown-callouts = ">=0.4.0"
markdown-include = ">=0.8.1"
mkdocstrings = {extras = ["python"], version = ">=0.19.0"}
mkdocs-jupyter = ">=0.24.6"
mkdocs-material = ">=9.5.12"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
markers = [
    "integration: marks tests as integration tests (downloads data, requires auth)",
    "slow: marks tests as slow running",
]
# Skip integration tests by default
addopts = "-v -m 'not integration'"
testpaths = ["tests"]

[[tool.mypy.overrides]]
module = [
  "colorama.*",
  "netCDF4.*",
  "openpyxl.*"
]
ignore_missing_imports = true


[tool.ruff]
builtins = ["ellipsis"]
exclude = [
  ".eggs",
  "doc",
  "_typed_ops.pyi",
]
# Allow lines to be as long as 100.
line-length = 100
target-version = "py311"

[tool.ruff.lint]
# E402: module level import not at top of file
# E501: line too long - let black worry about that
# E731: do not assign a lambda expression, use a def
ignore = [
  "E402",
  "E501",
  "E731",
]
select = [
  "F", # Pyflakes
  "E", # Pycodestyle
  "W",
  "I", # isort
  "UP", # Pyupgrade
]
