[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ncompare"
version = "1.15.0a2"
description = "Compare the structure of two NetCDF files at the command line"
authors = [
    { name = "Daniel Kaufman", email = "daniel.kaufman@nasa.gov" }
]
readme = "README.md"
requires-python = ">=3.11,<4"
repository = "https://github.com/nasa/ncompare"
license = "Apache-2.0"
classifiers = [
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "numpy>=2.4.0",
    "netcdf4>=1.6.4",
    "xarray>=2025.12.0",
    "colorama>=0.4.6",
    "openpyxl>=3.1.2",
    "h5py>=3.15.1",
    "h5netcdf>=1.7.3",
]

[project.scripts]
ncompare = "ncompare.console:main"

[tool.pytest.ini_options]
markers = [
    "integration: marks tests as integration tests (downloads data, requires auth)",
    "slow: marks tests as slow running",
]
# Skip integration tests by default
addopts = "-v -m 'not integration'"
testpaths = ["tests"]

[[tool.mypy.overrides]]
module = [
  "colorama.*",
  "netCDF4.*",
  "openpyxl.*"
]
ignore_missing_imports = true


[tool.ruff]
builtins = ["ellipsis"]
exclude = [
  ".eggs",
  "doc",
  "_typed_ops.pyi",
]
# Allow lines to be as long as 100.
line-length = 100
target-version = "py311"

[tool.ruff.lint]
# E402: module level import not at top of file
# E501: line too long - let black worry about that
# E731: do not assign a lambda expression, use a def
ignore = [
  "E402",
  "E501",
  "E731",
]
select = [
  "F", # Pyflakes
  "E", # Pycodestyle
  "W",
  "I", # isort
  "UP", # Pyupgrade
]

[tool.bumpversion]
current_version = "1.15.0a2"
parse = """(?x)
    (?P<major>\\d+)\\.(?P<minor>\\d+)\\.(?P<patch>\\d+)
    (?:
        (?P<pre_label>a|rc)
        (?P<pre_number>\\d+)
    )?
"""
serialize = [
    "{major}.{minor}.{patch}{pre_label}{pre_number}",
    "{major}.{minor}.{patch}",
]
search = "version = \"{current_version}\""
replace = "version = \"{new_version}\""
commit = false
tag = false

[[tool.bumpversion.files]]
filename = "pyproject.toml"
search = "version = \"{current_version}\""
replace = "version = \"{new_version}\""

[tool.bumpversion.parts.pre_label]
optional_value = "final"
values = ["a", "rc", "final"]

[tool.bumpversion.parts.pre_number]
first_value = 1

[dependency-groups]
dev = [
    "earthaccess>=0.15.1",
    "markdown-callouts>=0.4.0",
    "markdown-include>=0.8.1",
    "mkdocs>=1.6.1",
    "mkdocs-jupyter>=0.25.1",
    "mkdocs-material>=9.7.1",
    "mkdocstrings-python>=2.0.1",
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.10",
]
